<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <ImageButton
        android:id="@+id/btnBack2"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/resource_return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/back"/>

    <TextView
        android:id="@+id/forgot_p"
        android:layout_width="168dp"
        android:layout_height="92dp"
        android:fontFamily="@font/outfit_bold"
        android:gravity="left"
        android:text="@string/password_f"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30" />


    <TextView
        android:id="@+id/introduction2"
        android:layout_width="359dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/outfit_light"
        android:gravity="left"
        android:text="@string/password_f_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/forgot_p"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/forgot_p"
        app:layout_constraintTop_toBottomOf="@+id/forgot_p" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/register_rectangle"
        android:fontFamily="@font/outfit_bold"
        android:hint="@string/password_f_phone"
        android:padding="10sp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/introduction2"
        app:layout_constraintStart_toStartOf="@+id/introduction2"
        app:layout_constraintTop_toBottomOf="@+id/introduction2" />

    <Button
        android:id="@+id/btnSumit"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/outfit_bold"
        android:gravity="center"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/phoneNumber"
        app:layout_constraintStart_toStartOf="@+id/phoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />


</androidx.constraintlayout.widget.ConstraintLayout>